# indoor-api

./: .env.example  .gitignore  Flujo  TODO.md  database_models.py  db.sql  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini  run_server.py  serverless.yml
app/: logger.py  main.py
app/config/: __init__.py
app/dtos/: __init__.py  buscadorDto.py  equipment_dto.py  medition_dto.py
app/helpers/: __init__.py  array_helper.py  str_helper.py
app/middleware/: __init__.py
app/middleware/auth/: __init__.py  check_token.py  deps.py
app/middleware/error_handler/: __init__.py  error_handler.py  wrap.py
app/middleware/exceptions/: __init__.py  app_error.py  bad_request_error.py  forbidden_error.py  not_found_error.py  test_app_error.py  unauthorized_error.py
app/models/: __init__.py  configuration.py  configuration_history.py  configuration_result.py  connection_builder.py  equipment.py  product_medition.py  user.py
app/services/equipment/: equipment_service.py  equipment_service_deps.py
app/services/user/: user_service.py  user_service_deps.py
app/urls/: __init__.py  equipment.py  main.py  ping.py  user.py
app/views/buscador/: buscador.py  buscador_deps.py
app/views/equipment/: equipment_deps.py  equipment_view.py
